--- a/src/html/reservation/SCR_GA_RV_0204_M01_P01.html
+++ b/src/html/reservation/SCR_GA_RV_0204_M01_P01.html
@@ -1,19 +1,20 @@
-<div class="layer-body">
-	<div class="reservation">
-		<div class="search-result">
-			<div class="item">
-				<strong class="keyword">시상빌딩</strong>
-				<p class="address">서울 강남구 대치동 905-19 text text text text...</p>
+<div class="layer-wrap">
+	<div class="layer-body">
+		<div class="reservation">
+			<div class="search-result">
+				<div class="item">
+					<strong class="keyword">시상빌딩</strong>
+					<p class="address">서울 강남구 대치동 905-19 text text text text...</p>
+				</div>
+				<div class="price">+15,000<em>원</em></div>
 			</div>
-			<div class="price">+15,000<em>원</em></div>
 		</div>
 	</div>
-</div>
-<div class="layer-footer">
-	<div class="btn-wrap">
-		<div class="btn-group">
-			<button type="button" class="btn primary lg">선택</button>
+	<div class="layer-footer">
+		<div class="btn-wrap">
+			<div class="btn-group">
+				<button type="button" class="btn primary lg">선택</button>
+			</div>
 		</div>
 	</div>
-</div>
 </div>
