--- a/src/html/reservation/SCR_GA_RV_0204_P01.html
+++ b/src/html/reservation/SCR_GA_RV_0204_P01.html
@@ -1,20 +1,22 @@
-<div class="layer-header">
-	<!-- 프리존 반납이란? -->
-	@@include('@@webRoot/include/header.html', {
-		type: "sub_pop",
-		title: "프리존 반납 안내"
-	})
-</div>
-
-<div class="layer-body">
-	<div class="reservation free_popup">
-		<h3 class="title">
-			<span class="emphasis">프리존</span> 반납이란?
-		</h3>
-		<ul class="list">
-			<li>대여 그린존 → 내 집, 회사 앞 등 원하는 위치 어디에나 반납 가능한 편도 서비스입니다.</li>
-			<li>유료 주차장 반납 시 주차장 입차 시간부터 반납 후 30분까지의 주차요금은 본인 부담입니다. (반납 후 별도 실비 결제됨)</li>
-			<li>주정차 금지구역에 반납하여 과태료가 발생한 경우 본인 부담입니다.</li>
-		</ul>
+<div class="layer-wrap">
+	<div class="layer-header">
+		<!-- 프리존 반납이란? -->
+		@@include('@@webRoot/include/header.html', {
+			type: "sub_pop",
+			title: "프리존 반납 안내"
+		})
+	</div>
+	
+	<div class="layer-body">
+		<div class="reservation free_popup">
+			<h3 class="title">
+				<span class="emphasis">프리존</span> 반납이란?
+			</h3>
+			<ul class="list">
+				<li>대여 그린존 → 내 집, 회사 앞 등 원하는 위치 어디에나 반납 가능한 편도 서비스입니다.</li>
+				<li>유료 주차장 반납 시 주차장 입차 시간부터 반납 후 30분까지의 주차요금은 본인 부담입니다. (반납 후 별도 실비 결제됨)</li>
+				<li>주정차 금지구역에 반납하여 과태료가 발생한 경우 본인 부담입니다.</li>
+			</ul>
+		</div>
 	</div>
 </div>
