--- a/src/html/reservation/SCR_GA_RV_0211_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0211_M01.html
@@ -1,65 +1,67 @@
-<div class="layer-header">
-	<!-- 프리존 반납이란? -->
-	@@include('@@webRoot/include/header.html', {
-		type: "sub_pop",
-		title: "예약 전 주의사항"
-	})
-</div>
-
-<div class="layer-body">
-	<div class="reservation">
-		<section class="pb0">
-			<h2>주요 페널티 안내</h2>
-			<p>회원 영구정지 및 페널티 20만원+발생 실비 청구</p>
-			<ul class="list">
-				<li>차량내 흡연, 반려동물 캐리어 미탑승 적발</li>
-				<li>제3자 및 동반 운전자 단독 운행</li>
-				<li>대여기간 내 자동차 사고/파손 미신고</li>
-			</ul>
-
-			<ul class="tmp-faq-list">
-				<li>
-					<button type="button">전체 페널티 보기<i class="ico arrow-bot md"></i></button>
-					<div data-box-type="accordion">
-						<div>
-							답변이 출력됩니다.<br>
-							답변이 출력됩니다.<br>
-							답변이 출력됩니다.
+<div class="layer-wrap">
+	<div class="layer-header">
+		<!-- 프리존 반납이란? -->
+		@@include('@@webRoot/include/header.html', {
+			type: "sub_pop",
+			title: "예약 전 주의사항"
+		})
+	</div>
+	
+	<div class="layer-body">
+		<div class="reservation">
+			<section class="pb0">
+				<h2>주요 페널티 안내</h2>
+				<p>회원 영구정지 및 페널티 20만원+발생 실비 청구</p>
+				<ul class="list">
+					<li>차량내 흡연, 반려동물 캐리어 미탑승 적발</li>
+					<li>제3자 및 동반 운전자 단독 운행</li>
+					<li>대여기간 내 자동차 사고/파손 미신고</li>
+				</ul>
+	
+				<ul class="tmp-faq-list">
+					<li>
+						<button type="button">전체 페널티 보기<i class="ico arrow-bot md"></i></button>
+						<div data-box-type="accordion">
+							<div>
+								답변이 출력됩니다.<br>
+								답변이 출력됩니다.<br>
+								답변이 출력됩니다.
+							</div>
 						</div>
-					</div>
-				</li>
-			</ul>
-
-		</section>
-		<hr class="divider" />
-		<section class="pb0">
-			<h2>취소 수수료 안내</h2>
-			<p>취소 시점에 따라 수수료가 부과될 수 있습니다.</p>
-
-			<ul class="tmp-faq-list">
-				<li>
-					<button type="button">취소 수수료 자세히 보기<i class="ico arrow-bot md"></i></button>
-					<div data-box-type="accordion">
-						<div>
-							답변이 출력됩니다.<br>
-							답변이 출력됩니다.<br>
-							답변이 출력됩니다.
+					</li>
+				</ul>
+	
+			</section>
+			<hr class="divider" />
+			<section class="pb0">
+				<h2>취소 수수료 안내</h2>
+				<p>취소 시점에 따라 수수료가 부과될 수 있습니다.</p>
+	
+				<ul class="tmp-faq-list">
+					<li>
+						<button type="button">취소 수수료 자세히 보기<i class="ico arrow-bot md"></i></button>
+						<div data-box-type="accordion">
+							<div>
+								답변이 출력됩니다.<br>
+								답변이 출력됩니다.<br>
+								답변이 출력됩니다.
+							</div>
 						</div>
-					</div>
-				</li>
-			</ul>
-		</section>
-		<hr class="divider" />
-		<section>
-			<h2>이용 안내</h2>
-			<ul class="list">
-				<li>주유 시 차량 내 비치된 주유카드를 이용해주세요.</li>
-				<li>운행 전, 차량 외관상태를 확인 후 파손된 부위를 촬영하여 등록해주세요. (스마트키 메뉴 내 차량확인 기능 활용)</li>
-				<li>운행 전, 하이패스와 블랙박스, 내비게이션 동작 상태를 확인해주세요.</li>
-				<li>포인트는 대여요금에만 적용이 가능합니다.</li>
-				<li>무료편도, 쿠폰 사용한 예약은 조기반납 포인트가 지급되지 않습니다.</li>
-				<li>하이패스로 결제한 통행료, 주차비는 대부분 3일 이내에 자동 결제되나 최대 2주 소요될 수도 있습니다.</li>
-			</ul>
-		</section>
+					</li>
+				</ul>
+			</section>
+			<hr class="divider" />
+			<section>
+				<h2>이용 안내</h2>
+				<ul class="list">
+					<li>주유 시 차량 내 비치된 주유카드를 이용해주세요.</li>
+					<li>운행 전, 차량 외관상태를 확인 후 파손된 부위를 촬영하여 등록해주세요. (스마트키 메뉴 내 차량확인 기능 활용)</li>
+					<li>운행 전, 하이패스와 블랙박스, 내비게이션 동작 상태를 확인해주세요.</li>
+					<li>포인트는 대여요금에만 적용이 가능합니다.</li>
+					<li>무료편도, 쿠폰 사용한 예약은 조기반납 포인트가 지급되지 않습니다.</li>
+					<li>하이패스로 결제한 통행료, 주차비는 대부분 3일 이내에 자동 결제되나 최대 2주 소요될 수도 있습니다.</li>
+				</ul>
+			</section>
+		</div>
 	</div>
 </div>
