--- a/src/html/reservation/SCR_GA_RV_0212_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0212_M01.html
@@ -1,18 +1,20 @@
-<div class="layer-header">
-    <h5 class="title">그린카 금연서약</h5>
-    <!-- <button type="button" class="layer-close" >닫기</button> -->
-</div>
-<div class="layer-body">
-    <div class="wrap">
-        <p>처음 예약하시나요?<br />그린카는 쾌적한 차량 상태를 유지하기 위해 차량 내 흡연을 금지하고 있습니다. 나와 다른 고객 모두를 위한 금연 서약에 지금 동의해주세요.</p>
-        <p class="emphasis">* 서약을 지키지 않으신 경우 페널티(20만원)이 부과되고 회원자격이 박탈됩니다</p>
-        <p class="sign">서약자<em>홍길동</em></p>
-    </div>
-</div>
-<div class="layer-footer">
-    <div class="btn-wrap">
-        <div class="btn-group single">
-            <button type="button" class="btn primary md">서약합니다</button>
-        </div>
-    </div>
+<div class="layer-wrap">
+	<div class="layer-header">
+		<h5 class="title">그린카 금연서약</h5>
+		<!-- <button type="button" class="layer-close" >닫기</button> -->
+	</div>
+	<div class="layer-body">
+		<div class="wrap">
+			<p>처음 예약하시나요?<br />그린카는 쾌적한 차량 상태를 유지하기 위해 차량 내 흡연을 금지하고 있습니다. 나와 다른 고객 모두를 위한 금연 서약에 지금 동의해주세요.</p>
+			<p class="emphasis">* 서약을 지키지 않으신 경우 페널티(20만원)이 부과되고 회원자격이 박탈됩니다</p>
+			<p class="sign">서약자<em>홍길동</em></p>
+		</div>
+	</div>
+	<div class="layer-footer">
+		<div class="btn-wrap">
+			<div class="btn-group single">
+				<button type="button" class="btn primary md">서약합니다</button>
+			</div>
+		</div>
+	</div>
 </div>
