--- a/src/html/reservation/SCR_GA_RV_0213_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0213_M01.html
@@ -1,31 +1,33 @@
-<div class="layer-header">
-	<h5 class="title">예약결제 안내</h5>
-	<!-- <button type="button" class="layer-close" >닫기</button> -->
-</div>
-<div class="layer-body">
-	<p>차량예약 및 요금결제를 진행하시겠습니까?</p>
-	<div class="box">
-		<ul class="desc-list">
-			<li>
-				<span class="name">예약자</span>
-				<span class="value">홍길동</span>
-			</li>
-			<li>
-				<span class="name">대여</span>
-				<span class="value">2022-04-23 10:00</span>
-			</li>
-			<li>
-				<span class="name">반납</span>
-				<span class="value">2022-04-23 12:00</span>
-			</li>
-		</ul>
+<div class="layer-wrap">
+	<div class="layer-header">
+		<h5 class="title">예약결제 안내</h5>
+		<!-- <button type="button" class="layer-close" >닫기</button> -->
 	</div>
-</div>
-<div class="layer-footer">
-	<div class="btn-wrap">
-		<div class="btn-group">
-			<button type="button" class="btn cancel md">아니오</button>
-			<button type="button" class="btn md">예약하기</button>
+	<div class="layer-body">
+		<p>차량예약 및 요금결제를 진행하시겠습니까?</p>
+		<div class="box">
+			<ul class="desc-list">
+				<li>
+					<span class="name">예약자</span>
+					<span class="value">홍길동</span>
+				</li>
+				<li>
+					<span class="name">대여</span>
+					<span class="value">2022-04-23 10:00</span>
+				</li>
+				<li>
+					<span class="name">반납</span>
+					<span class="value">2022-04-23 12:00</span>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<div class="layer-footer">
+		<div class="btn-wrap">
+			<div class="btn-group">
+				<button type="button" class="btn cancel md">아니오</button>
+				<button type="button" class="btn md">예약하기</button>
+			</div>
 		</div>
 	</div>
 </div>
