--- a/src/status.html
+++ b/src/status.html
@@ -27,8 +27,9 @@
 			table tr td:nth-child(2),
 			table tr td:nth-child(3),
 			table tr td:nth-child(4),
-			table tr td:nth-child(5),
-			table tr td:nth-child(6){width:200px;}
+			table tr td:nth-child(5){width:200px;}
+			table tr td:nth-child(6){width:100px;text-align:center;}
+			table tr td:nth-child(7){width:100px;}
 			table tr td:nth-child(8){width:250px;}
 			table th {color:#333; background-color:#ddd;}
 			table th,
@@ -142,7 +143,7 @@
 							<th scope="col">4depth</th>
 							<th scope="col">5depth</th>
 							<th scope="col">6depth</th>
-							<th scope="col">7depth</th>
+							<th scope="col">작업자</th>
 							<th scope="col">path</th>
 							<th scope="col">file</th>
 							<th scope="col">stat</th>
@@ -154,26 +155,26 @@
                         <tr>
 							<td>회원계정</td>
 							<td>가입완료</td>
-							<td>추천인 입력</td>
+							<td class="througt">추천인 입력</td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>이민우</td>
 							<td>/member</td>
-							<td><a target="_blank" href="components/popup_module.html#member#SCR_GA_CA_0110_P02#full">SCR_GA_CA_0110_P02.html</a></td>
-							<td class="stat">⚪</td>
+							<td><a target="_blank" class="througt" href="components/popup_module.html#member#SCR_GA_CA_0110_P02#full">SCR_GA_CA_0110_P02.html</a></td>
+							<td class="stat"></td>
 							<td class="date"></td>
 							<td>앱</td>
 						</tr>
 						<tr>
 							<td></td>
 							<td></td>
-							<td>프로모션코드 입력</td>
+							<td class="througt">프로모션코드 입력</td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>이민우</td>
 							<td>/member</td>
-							<td><a target="_blank" href="components/popup_module.html#member#SCR_GA_CA_0110_P03#full">SCR_GA_CA_0110_P03.html</a></td>
-							<td class="stat">⚪</td>
+							<td><a target="_blank" class="througt" href="components/popup_module.html#member#SCR_GA_CA_0110_P03#full">SCR_GA_CA_0110_P03.html</a></td>
+							<td class="stat"></td>
 							<td class="date"></td>
 							<td>앱</td>
 						</tr>
@@ -193,7 +194,7 @@
                             <th scope="col">4depth</th>
                             <th scope="col">5depth</th>
                             <th scope="col">6depth</th>
-                            <th scope="col">7depth</th>
+                            <th scope="col">작업자</th>
                             <th scope="col">path</th>
                             <th scope="col">file</th>
                             <th scope="col">stat</th>
@@ -208,7 +209,7 @@
 							<td></td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>이민우</td>
 							<td>/reservation</td>
 							<!-- 
 								기본 팝업    : components/popup_module.html#SCR_GA_CA_0110_P01
@@ -217,7 +218,7 @@
 								풀 팝업      : components/popup_module.html#SCR_GA_CA_0110_P01#full
 							 -->
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0201_M01.html">SCR_GA_RV_0201_M01.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -227,10 +228,23 @@
 							<td>편도로 변경</td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>이민우</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0203_M01.html">SCR_GA_RV_0203_M01.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚪</td>
+							<td class="date"></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td></td>
+							<td>편도로 변경</td>
+							<td></td>
+							<td></td>
+							<td>이민우</td>
+							<td>/reservation</td>
+							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0203_M01_P01#bottom#drag">SCR_GA_RV_0203_M01_P01.html</a></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -240,7 +254,7 @@
 							<td>프리존 반납 </td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>이민우</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0204_M01.html">SCR_GA_RV_0204_M01.html</a></td>
 							<td class="stat">⚪</td>
@@ -253,7 +267,7 @@
 							<td>프리존 반납 </td>
 							<td>프리존 설정</td>
 							<td></td>
-							<td></td>
+							<td>이민우</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0204_M01_P01#bottom#drag">SCR_GA_RV_0204_M01_P01.html</a></td>
 							<td class="stat">⚪</td>
@@ -266,7 +280,7 @@
 							<td></td>
 							<td>프리존 반납이란?</td>
 							<td></td>
-							<td></td>
+							<td>이민우</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0204_P01#full">SCR_GA_RV_0204_P01.html</a></td>
 							<td class="stat">⚪</td>
@@ -279,7 +293,7 @@
 							<td>그린존 반납  </td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>이민우</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0205_M01.html">SCR_GA_RV_0205_M01.html</a></td>
 							<td class="stat">⚪</td>
@@ -292,7 +306,7 @@
 							<td></td>
 							<td>그린존 설정</td>
 							<td></td>
-							<td></td>
+							<td>이민우</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0205_M01_P01#bottom#drag">SCR_GA_RV_0205_M01_P01.html</a></td>
 							<td class="stat">⚪</td>
@@ -305,10 +319,10 @@
 							<td>할인/적립</td>
 							<td>쿠폰</td>
 							<td></td>
-							<td></td>
+							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T01.html">SCR_GA_RV_0206_T01.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -318,10 +332,10 @@
 							<td></td>
 							<td>KT멤버십</td>
 							<td></td>
-							<td></td>
+							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T02.html">SCR_GA_RV_0206_T02.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -331,10 +345,10 @@
 							<td></td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T02_1.html">SCR_GA_RV_0206_T02_1.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -344,10 +358,10 @@
 							<td></td>
 							<td>T멤버십</td>
 							<td></td>
-							<td></td>
+							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T03.html">SCR_GA_RV_0206_T03.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -357,10 +371,10 @@
 							<td></td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T03_1.html">SCR_GA_RV_0206_T03_1.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -370,10 +384,10 @@
 							<td>L.POINT</td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0207_M01.html">SCR_GA_RV_0207_M01.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -383,10 +397,10 @@
 							<td>L.POINT</td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0207_M01_1.html">SCR_GA_RV_0207_M01_1.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -396,7 +410,7 @@
 							<td>보험료 안내</td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0208_M01#full">SCR_GA_RV_0208_M01.html</a></td>
 							<td class="stat">⚪</td>
@@ -422,7 +436,7 @@
 							<td class="througt">대여예약 약관동의</td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a class="througt" target="_blank" href="html/reservation/SCR_GA_RV_0210_M01.html">SCR_GA_RV_0210_M01.html</a></td>
 							<td class="stat"></td>
@@ -435,7 +449,7 @@
 							<td>예약 전 주의사항</td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0211_M01#full">SCR_GA_RV_0211_M01.html</a></td>
 							<td class="stat">⚪</td>
@@ -448,10 +462,10 @@
 							<td>그린카 금연 서약</td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0212_M01">SCR_GA_RV_0212_M01.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -461,10 +475,10 @@
 							<td>예약결제 안내</td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0213_M01">SCR_GA_RV_0213_M01.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -484,7 +498,7 @@
                             <th scope="col">4depth</th>
                             <th scope="col">5depth</th>
                             <th scope="col">6depth</th>
-                            <th scope="col">7depth</th>
+                            <th scope="col">작업자</th>
                             <th scope="col">path</th>
                             <th scope="col">file</th>
                             <th scope="col">stat</th>
@@ -535,7 +549,7 @@
                             <th scope="col">4depth</th>
                             <th scope="col">5depth</th>
                             <th scope="col">6depth</th>
-                            <th scope="col">7depth</th>
+                            <th scope="col">작업자</th>
                             <th scope="col">path</th>
                             <th scope="col">file</th>
                             <th scope="col">stat</th>
@@ -846,7 +860,7 @@
                             <th scope="col">4depth</th>
                             <th scope="col">5depth</th>
                             <th scope="col">6depth</th>
-                            <th scope="col">7depth</th>
+                            <th scope="col">작업자</th>
                             <th scope="col">path</th>
                             <th scope="col">file</th>
                             <th scope="col">stat</th>
@@ -1222,7 +1236,7 @@
                             <th scope="col">4depth</th>
                             <th scope="col">5depth</th>
                             <th scope="col">6depth</th>
-                            <th scope="col">7depth</th>
+                            <th scope="col">작업자</th>
                             <th scope="col">path</th>
                             <th scope="col">file</th>
                             <th scope="col">stat</th>
@@ -1442,7 +1456,7 @@
                             <th scope="col">4depth</th>
                             <th scope="col">5depth</th>
                             <th scope="col">6depth</th>
-                            <th scope="col">7depth</th>
+                            <th scope="col">작업자</th>
                             <th scope="col">path</th>
                             <th scope="col">file</th>
                             <th scope="col">stat</th>
@@ -1636,7 +1650,7 @@
                             <th scope="col">4depth</th>
                             <th scope="col">5depth</th>
                             <th scope="col">6depth</th>
-                            <th scope="col">7depth</th>
+                            <th scope="col">작업자</th>
                             <th scope="col">path</th>
                             <th scope="col">file</th>
                             <th scope="col">stat</th>
@@ -1804,7 +1818,7 @@
                             <th scope="col">4depth</th>
                             <th scope="col">5depth</th>
                             <th scope="col">6depth</th>
-                            <th scope="col">7depth</th>
+                            <th scope="col">작업자</th>
                             <th scope="col">path</th>
                             <th scope="col">file</th>
                             <th scope="col">stat</th>
@@ -1855,7 +1869,7 @@
                             <th scope="col">4depth</th>
                             <th scope="col">5depth</th>
                             <th scope="col">6depth</th>
-                            <th scope="col">7depth</th>
+                            <th scope="col">작업자</th>
                             <th scope="col">path</th>
                             <th scope="col">file</th>
                             <th scope="col">stat</th>
