--- a/src/html/member/SCR_GA_CA_0110_P02.html
+++ b/src/html/member/SCR_GA_CA_0110_P02.html
@@ -1,50 +1,52 @@
-<div class="layer-header">
-	@@include('@@webRoot/include/header.html', {
-		type: "sub_pop",
-		title: false
-	})
-</div>
-
-<div class="layer-body">
-	<div class="member"> 
-		
-		<p class="desc-xl">
-			추천인 아이디를 입력해주세요
-		</p>
-
-		<div class="ip-group">
-			<div class="row error">
-				<label for="ip01" class="ip-label">추천인 아이디</label>
-				<input id="ip01" type="text" class="ip-txt" placeholder="추천인 아이디 입력">
-				<button type="button" class="icon-group ip-icon">
-					<i class="ico delete md"></i>
-				</button>
-				<div class="line"></div>
-			</div>
-			<p class="error-txt">추천인 아이디가 일치하지 않습니다</p>
-
-		</div>
-
-		<div class="id-group">
-			<p class="desc">
-				아이디를 선택해주세요
+<div class="layer-wrap">
+	<div class="layer-header">
+		@@include('@@webRoot/include/header.html', {
+			type: "sub_pop",
+			title: false
+		})
+	</div>
+	
+	<div class="layer-body">
+		<div class="member"> 
+			
+			<p class="desc-xl">
+				추천인 아이디를 입력해주세요
 			</p>
-
-			<div class="list">
-				<div class="item">
-					<a href="#">
-						greencar
-					</a>
+	
+			<div class="ip-group">
+				<div class="row error">
+					<label for="ip01" class="ip-label">추천인 아이디</label>
+					<input id="ip01" type="text" class="ip-txt" placeholder="추천인 아이디 입력">
+					<button type="button" class="icon-group ip-icon">
+						<i class="ico delete md"></i>
+					</button>
+					<div class="line"></div>
 				</div>
-				<div class="item">
-					<a href="#">
-						greencar
-						<span class="lpoint"><span class="hide-txt"></span></span>
-					</a>
-				</div>
+				<p class="error-txt">추천인 아이디가 일치하지 않습니다</p>
+	
 			</div>
-
+	
+			<div class="id-group">
+				<p class="desc">
+					아이디를 선택해주세요
+				</p>
+	
+				<div class="list">
+					<div class="item">
+						<a href="#">
+							greencar
+						</a>
+					</div>
+					<div class="item">
+						<a href="#">
+							greencar
+							<span class="lpoint"><span class="hide-txt"></span></span>
+						</a>
+					</div>
+				</div>
+	
+			</div>
+	
 		</div>
-
 	</div>
 </div>
