--- a/src/html/popup/SCR_GA_CA_0110_P02.html
+++ b/src/html/popup/SCR_GA_CA_0110_P02.html
@@ -1,18 +1,19 @@
-<div class="layer-header">
-	<h5>Bottom Sheet up</h5>
-	<button type="button" class="layer-close" onclick="closeLayerPopup(this);">닫기</button>
-</div>
-<div class="layer-body">
-	<p>2022.07.01</p>
-	<p>그린카 할인혜택 푸시알림 수신을 동의하셨습니다.222333</p>
-	<p>설정&gt;할인혜택 푸시알림 on/off를 통해 수신여부를 변경하실 수 있습니다.</p>
-</div>
-<div class="layer-footer">
-	<div class="btn-wrap">
-		<div class="btn-group">
-			<button type="button" class="btn secondary xl">취소</button>
-			<button type="button" class="btn primary xl">확인</button>
+<div class="layer-wrap">
+	<div class="layer-header">
+		<h5>Bottom Sheet up</h5>
+		<button type="button" class="layer-close" onclick="closeLayerPopup(this);">닫기</button>
+	</div>
+	<div class="layer-body">
+		<p>2022.07.01</p>
+		<p>그린카 할인혜택 푸시알림 수신을 동의하셨습니다.222333</p>
+		<p>설정&gt;할인혜택 푸시알림 on/off를 통해 수신여부를 변경하실 수 있습니다.</p>
+	</div>
+	<div class="layer-footer">
+		<div class="btn-wrap">
+			<div class="btn-group">
+				<button type="button" class="btn secondary xl">취소</button>
+				<button type="button" class="btn primary xl">확인</button>
+			</div>
 		</div>
 	</div>
-</div>
 </div>
