--- a/src/html/reservation/SCR_GA_RV_0201_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0201_M01.html
@@ -109,14 +109,14 @@
 		
 								<div class="grid-flex">
 									<div class="flex">L.POINT</div>
-									<div class="flex">0원</div>
+									<div class="flex"><a href="#">0원</a></div>
 								</div>
 							</div>
 						</section>
 	
 						<section class="section">
 							<div class="title-area grid-flex">
-								<h3 class="title-xs flex">포인트</h3>
+								<h3 class="title-xs flex">보험료</h3>
 								<div class="flex">
 									<button class="btn-link" type="button">자세히<i class="ico arrow-right-nav050 xs"></i></button>
 								</div>
@@ -224,6 +224,7 @@
 
 				</div>
 
+				@@include('@@webRoot/include/bot_fix.html', {type: "type01", title:"총 12,436원 결제하기"})
 			</div>
 		</section>
 		<!-- //container -->
