바텀 버튼 영역 disabled 추가

--- a/src/html/reservation/SCR_GA_RV_0201_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0201_M01.html
@@ -224,7 +224,7 @@
 
 				</div>
 
-				@@include('@@webRoot/include/bot_fix.html', {type: "type01", title:"총 12,436원 결제하기"})
+				@@include('@@webRoot/include/bot_fix.html', {type: "type01", title:"총 12,436원 결제하기", disabled:"disabled"})
 			</div>
 		</section>
 		<!-- //container -->
