--- a/src/html/reservation/SCR_GA_RV_0206_T02_1.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T02_1.html
@@ -55,7 +55,7 @@
                             </section>
                         </div>
                     </div>
-					@@include('@@webRoot/include/bot_fix.html', {type: "type01", title:"적용하기"})
+					@@include('@@webRoot/include/bot_fix.html', {type: "type01", title:"적용하기", disabled:"false"})
                 </div>
             </section>
             <!-- //container -->
