--- a/src/html/reservation/SCR_GA_RV_0207_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0207_M01.html
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                 </div>
-                @@include('@@webRoot/include/bot_fix.html', {type: "type01", title:"L.POINT 카드 인증"})
+                @@include('@@webRoot/include/bot_fix.html', {type: "type01", title:"L.POINT 카드 인증", disabled:"false"})
             </section>
             <!-- //container -->
         </div>
