--- a/src/html/reservation/SCR_GA_RV_0207_M01_1.html
+++ b/src/html/reservation/SCR_GA_RV_0207_M01_1.html
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                 </div>
-                @@include('@@webRoot/include/bot_fix.html', {type: "type01", title:"적용하기"})
+                @@include('@@webRoot/include/bot_fix.html', {type: "type01", title:"적용하기", disabled:"false"})
             </section>
             <!-- //container -->
         </div>
