이미지 네이밍 규칙 수정

--- a/src/html/reservation/SCR_GA_RV_0201_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0201_M01.html
@@ -53,7 +53,11 @@
 							</div>
 							<div class="grid-flex">
 								<div class="flex"><a href="#">오늘 10:10 ~ 12:10</a></div>
-								<div class="flex">2시간</div>
+								<div class="flex">
+									<button type="button">
+										2시간
+									</button>
+								</div>
 							</div>
 						</section>
 	
@@ -65,7 +69,12 @@
 							</div>
 							<div class="grid-flex">
 								<div class="flex col-3">대여/반납 위치</div>
-								<div class="return flex col-7"><i class="ico badge-g md"></i>한남역 1번 출구</div>
+								<div class="return flex col-7">
+									<button type="button">
+										<i class="ico badge-g md"></i>
+										한남역 1번 출구
+									</button>
+								</div>
 							</div>
 						</section>
 	
@@ -84,7 +93,9 @@
 							<div class="grid-flex">
 								<div class="flex col-2">할인/적립</div>
 								<div class="flex col-8">
-									<span class="price">-7,195원</span>
+									<button type="button">
+										<span class="price">-7,195원</span>
+									</button>
 								</div>
 							</div>
 	
@@ -109,7 +120,9 @@
 		
 								<div class="grid-flex">
 									<div class="flex">L.POINT</div>
-									<div class="flex"><a href="#">0원</a></div>
+									<div class="flex">
+										<button type="button">0원</button>
+									</div>
 								</div>
 							</div>
 						</section>
