--- a/src/status.html
+++ b/src/status.html
@@ -218,7 +218,7 @@
 								풀 팝업      : components/popup_module.html#SCR_GA_CA_0110_P01#full
 							 -->
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0201_M01.html">SCR_GA_RV_0201_M01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -231,7 +231,7 @@
 							<td>이민우</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0203_M01.html">SCR_GA_RV_0203_M01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -244,7 +244,7 @@
 							<td>이민우</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0203_M01_P01#bottom#drag">SCR_GA_RV_0203_M01_P01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -257,7 +257,7 @@
 							<td>이민우</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0204_M01.html">SCR_GA_RV_0204_M01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -270,7 +270,7 @@
 							<td>이민우</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0204_M01_P01#bottom#drag">SCR_GA_RV_0204_M01_P01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -283,7 +283,7 @@
 							<td>이민우</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0204_P01#full">SCR_GA_RV_0204_P01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -296,7 +296,7 @@
 							<td>이민우</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0205_M01.html">SCR_GA_RV_0205_M01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -309,7 +309,7 @@
 							<td>이민우</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0205_M01_P01#bottom#drag">SCR_GA_RV_0205_M01_P01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
